@@ -10,7 +10,7 @@
 Blocking Mono Scheduler(BE)      -> 117.80 RPS
 Blocking @Asybc Scheduler        -> 99.77 RPS
 Non-Blocking Mono Scheduler(BE)  -> 9109.52 RPS 
-Non-Blocking NoMono              -> RPS
+Non-Blocking NoMono NoScheduler  -> RPS
 ```
 <br/>
 
@@ -401,4 +401,69 @@ Percentage of the requests served within a certain time (ms)
   98%    183
   99%    211
  100%    281 (longest request)
+```
+
+### Benchmark 04: Stress Non-Blocking NoMono NoScheduler Date
+
+Stress Test Config:
+```bash
+ab -n 60000 -c 1000 http://localhost:8080/stress-benchmark-04
+```
+Code:
+```
+Controller -> @GetMapping("/stress-benchmark-04")
+Service    -> NoBlockService.getDate()
+```
+Impl:
+````java
+public String getDate() {
+  return new Date().toString();
+}
+````
+Specs
+
+Server JVM
+```
+-XX:+UseZGC \
+-Xms8G \
+-Xmx8G \
+-XX:MaxGCPauseMillis=200 \
+-XX:+UseStringDeduplication \
+-XX:+OptimizeStringConcat \
+-XX:+UseCompressedOops \
+-XX:+AlwaysPreTouch \
+-XX:+UseNUMA \
+-XX:+DisableExplicitGC
+```
+Client/Stress:
+```
+ulimit -n 65535
+```
+Server:
+```
+ulimit -n 65535
+```
+NO Schedulers
+```
+NONE
+```
+Netty Config:
+```java
+@Bean
+public HttpServer httpServer() {
+    IOUringEventLoopGroup loopResources = new IOUringEventLoopGroup(48);
+    return HttpServer.create()
+            .runOn(loopResources)
+            .option(ChannelOption.SO_BACKLOG, 128)
+            .option(ChannelOption.TCP_FASTOPEN, 1024)
+            .option(ChannelOption.ALLOCATOR, PooledByteBufAllocator.DEFAULT)
+            .childOption(ChannelOption.SO_KEEPALIVE, true)
+            .childOption(ChannelOption.TCP_NODELAY, true)
+            .childOption(ChannelOption.SO_RCVBUF, 1 * 1024 * 1024)  // 1 MB receive buffer
+            .childOption(ChannelOption.SO_SNDBUF, 1 * 1024 * 1024); // 1 MB send buffer
+}
+```
+Results:
+```
+
 ```
